--- a/extension/ui/pages/help.css
+++ b/extension/ui/pages/help.css
@@ -1,5 +1,6 @@
 body {
     background-color: #eee;
+    font-size: 12pt;
 }
 
 body>div {
@@ -67,6 +68,13 @@ ol>li>ul>li>ul {
     height: 1em;
 }
 
+.button {
+    height: .9em;
+    background-color: #8e8e8e;
+    padding: 3px;
+    border-radius: 4px;
+}
+
 #titleIcon {
     width: 1.2em;
     height: 1.2em;
@@ -95,8 +103,7 @@ ol>li>ul>li>ul {
     white-space: nowrap;
 }
 
-h2,
-h4 {
+h2, h4 {
     margin-bottom: 0px;
 }
 
@@ -118,8 +125,7 @@ code {
     font-size: 1.1em;
 }
 
-kbd,
-.key {
+kbd, .key {
     display: inline;
     display: inline-block;
     min-width: 1em;
@@ -137,17 +143,11 @@ kbd,
     user-select: none;
 }
 
-kbd[title],
-.key[title] {
+kbd[title], .key[title] {
     cursor: help;
 }
 
-kbd,
-kbd.dark,
-.dark-keys kbd,
-.key,
-.key.dark,
-.dark-keys .key {
+kbd, kbd.dark, .dark-keys kbd, .key, .key.dark, .dark-keys .key {
     background: rgb(80, 80, 80);
     background: -moz-linear-gradient(top, rgb(60, 60, 60), rgb(80, 80, 80));
     background: -webkit-gradient(linear, left top, left bottom, from(rgb(60, 60, 60)), to(rgb(80, 80, 80)));
@@ -158,10 +158,7 @@ kbd.dark,
     box-shadow: inset 0 0 1px rgb(150, 150, 150), inset 0 -.05em .4em rgb(80, 80, 80), 0 .1em 0 rgb(30, 30, 30), 0 .1em .1em rgba(0, 0, 0, .3);
 }
 
-kbd.light,
-.light-keys kbd,
-.key.light,
-.light-keys .key {
+kbd.light, .light-keys kbd, .key.light, .light-keys .key {
     background: rgb(250, 250, 250);
     background: -moz-linear-gradient(top, rgb(210, 210, 210), rgb(255, 255, 255));
     background: -webkit-gradient(linear, left top, left bottom, from(rgb(210, 210, 210)), to(rgb(255, 255, 255)));
@@ -177,15 +174,12 @@ kbd.light,
         background-color: white;
         margin: 0px;
     }
-
     body>div {
         border-width: 0px;
     }
-
     ol {
         padding-left: 20px;
     }
-
     ul {
         padding-left: 10px;
     }
@@ -195,24 +189,23 @@ kbd.light,
     body {
         background-color: #373737;
     }
-
     @media (max-width:800px) {
         body {
             background-color: #202023;
         }
     }
-
     body>div {
         background-color: #202023;
         border-color: rgb(81, 81, 81);
     }
-
-    body>div,
-    a {
+    body>div, a {
         color: #fdfdfd;
     }
-
     .option {
         color: #afafaf;
+    }
+    .button {
+        height: .9em;
+        background-color: #484848;
     }
 }
