--- a/extension/ui/pages/options.css
+++ b/extension/ui/pages/options.css
@@ -494,6 +494,7 @@ a {
 
 .side-panel .profiles select {
     min-width: calc(100% - 78px);
+    text-align-last: auto;
 }
 
 .side-panel .options-title,
@@ -539,6 +540,13 @@ html.maximized {
         justify-content: flex-start;        
     }
 
+    .side-panel .profiles {
+        margin-top: 0;
+        margin-left: 0;
+        margin-right: 8px;
+        justify-content: inherit;
+    }
+
     .profiles select {
         text-align-last: auto;
     }
@@ -546,7 +554,7 @@ html.maximized {
 
 @media (max-width:479px) {
     body {
-        min-width: 240px;
+        min-width: auto;
     }
 
     body,
