fix options page dark bg color if opened in a tab

--- a/extension/ui/pages/options.css
+++ b/extension/ui/pages/options.css
@@ -590,7 +590,7 @@ html.maximized {
     }
 
     .side-panel,
-    .side-panel main,
+    .side-panel body>main,
     .side-panel details>summary,
     .side-panel button,
     .side-panel select,
