--- a/src/extension/ui/pages/options.css
+++ b/src/extension/ui/pages/options.css
@@ -96,7 +96,7 @@ h3 {
     padding-top: 5px;
     margin-right: 10px;
     min-height: 28px;
-    margin-top: 0px;
+    margin-top: 8px;
 }
 
 h3 a {
@@ -518,6 +518,10 @@ a {
 .side-panel .options-title,
 .side-panel .option.bottom {
     display: none;
+}
+
+.side-panel h3 {
+    margin-top: 0;
 }
 
 .maximized body {
