--- a/src/extension/ui/pages/options.css
+++ b/src/extension/ui/pages/options.css
@@ -616,7 +616,7 @@ html.maximized {
     button,
     select,
     .popup-content {
-        background-color: #202023;
+        background-color: #23222b;
         color: #fdfdfd;
     }
 
